crates/engine/src/snapshots/jigc_engine__write__splice__remove_item_first.snap
---
source: crates/engine/src/splice.rs
expression: out
---
---
title: Auth flow
---

# Auth flow

## Criteria

### Burst allowance  {#burst-allowance}

A short burst is tolerated.
