crates/engine/src/snapshots/jigc_engine__write__splice__set_field_status.snap
---
source: crates/engine/src/write.rs
expression: out
---
---
status: superseded
date: 2026-05-23
---

# Rate-limit at the gateway

## Context

Per-client limits were enforced ad hoc.

## Options

Alternatives were weighed and rejected.

## Decision

Centralize rate limiting at the gateway.

## Consequences

Each service drops its local limiter.
